integracao com NH e Testes de Servico

--- a/MinhaEmpresa.Agenda/MinhaEmpresa.Agenda.Dominio/MinhaEmpresa.Agenda.Dominio.csproj
+++ b/MinhaEmpresa.Agenda/MinhaEmpresa.Agenda.Dominio/MinhaEmpresa.Agenda.Dominio.csproj
@@ -45,6 +45,7 @@
   <ItemGroup>
     <Compile Include="Entidades\Cliente.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Servicos\ServicoCliente.cs" />
     <Compile Include="ValueObjects\Address.cs" />
     <Compile Include="Entidades\User.cs" />
   </ItemGroup>
@@ -58,6 +59,9 @@
     <EmbeddedResource Include="Mapeamentos\EnderecoUsuario.hbm.xml">
       <SubType>Designer</SubType>
     </EmbeddedResource>
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Mapeamentos\Cliente.hbm.xml" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
