--- a/MinhaEmpresa.Agenda/MinhaEmpresa.Agenda.Testes/MinhaEmpresa.Agenda.Testes.csproj
+++ b/MinhaEmpresa.Agenda/MinhaEmpresa.Agenda.Testes/MinhaEmpresa.Agenda.Testes.csproj
@@ -34,6 +34,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Microsoft.VisualStudio.QualityTools.UnitTestFramework, Version=10.1.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL" />
     <Reference Include="nunit.framework">
       <HintPath>..\packages\NUnit.2.6.4\lib\nunit.framework.dll</HintPath>
     </Reference>
@@ -47,7 +48,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Repositorio\TesteRepositorioBase.cs" />
+    <Compile Include="Servicos\TesteServicoCliente.cs" />
+    <Compile Include="TesteRepositorioBase.cs" />
     <Compile Include="Repositorio\TesteUserAdressVO.cs" />
     <Compile Include="TesteCliente.cs" />
   </ItemGroup>
