DDD+NHibernate+MySQL+Unit Test+Value Object+Entities

--- a/MinhaEmpresa.Agenda/MinhaEmpresa.Agenda.Testes/MinhaEmpresa.Agenda.Testes.csproj
+++ b/MinhaEmpresa.Agenda/MinhaEmpresa.Agenda.Testes/MinhaEmpresa.Agenda.Testes.csproj
@@ -74,7 +74,10 @@
     <Service Include="{82A7F48D-3B50-4B1E-B82E-3ADA8210C358}" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="nhibernate.cfg.xml">
+    <EmbeddedResource Include="nhibernate.cfg.xml">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </EmbeddedResource>
+    <Content Include="OLD_nhibernate.cfg.xml">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
   </ItemGroup>
