--- a/MinhaEmpresa.Agenda/MinhaEmpresa.Agenda.Dominio/MinhaEmpresa.Agenda.Dominio.csproj
+++ b/MinhaEmpresa.Agenda/MinhaEmpresa.Agenda.Dominio/MinhaEmpresa.Agenda.Dominio.csproj
@@ -44,10 +44,10 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Entidades\Cliente.cs" />
+    <Compile Include="Entidades\User.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Servicos\ServicoCliente.cs" />
     <Compile Include="ValueObjects\Address.cs" />
-    <Compile Include="Entidades\User.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\MinhaEmpresa.SharedKernel.Dominio\MinhaEmpresa.SharedKernel.Dominio.csproj">
@@ -56,12 +56,8 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="Mapeamentos\EnderecoUsuario.hbm.xml">
-      <SubType>Designer</SubType>
-    </EmbeddedResource>
-  </ItemGroup>
-  <ItemGroup>
     <EmbeddedResource Include="Mapeamentos\Cliente.hbm.xml" />
+    <EmbeddedResource Include="Mapeamentos\EnderecoUsuario.hbm.xml" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
